Adding heart disease explanation

--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -20,13 +20,13 @@
   <h2>Compétences</h2><br>
   <h3>Data Science :</h3>
   <p><important-text>Langages &amp; frameworks :</important-text><br>
-  Python, MySQL, PostgreSQL, Git, MLFlow</p>
+  Python, MySQL, PostgreSQL, NoSQL, Git, MLFlow</p>
   <p><important-text>Machine &amp; Deep Learning :</important-text><br>
-  Régression linéaire, XGBoost, SVM, CNN, NLP</p>
+  Régression linéaire, XGBoost, SVM, Réseaux de neurones à convolution (CNN), Traitement du langage naturel (NLP)...</p>
   <p><important-text>Big Data &amp; Cloud :</important-text><br>
   PySpark, Hadoop, AWS</p>
   <p><important-text>MLOps &amp; Déploiement :</important-text><br>
-  CI/CD, API</p>
+  Intégration Continue et Livraison Continue (CI/CD), API</p>
 
   <h3>Machine Learning engineering :</h3>
   <p>PyCharm, Jira</p>
@@ -176,8 +176,8 @@
 
       Cours :<br>
       Collecter, explorer, préparer et analyser des données<br>
-      Élaborer des modè les prédictifs<br>
-      Déployer des modè les de données<br>
+      Élaborer des modèles prédictifs<br>
+      Déployer des modèles de données<br>
       Communiquer les résultats grâce à des visualisations<br>
       Participer à l'organisation et au pilotage d'un projet data science &amp; IA<br><br>
 
@@ -185,8 +185,8 @@
       Analyse de données éducatives<br>
       Préparation des données pour un organisme de santé publique<br> 
       Prédiction de la consommation énergétique des bâtiments<br>
-      Segmentation client pour un e-commerce<br>
-      Classification automatique des biens de consommation<br>
+      Segmentation client pour un site d'e-commerce<br>
+      Classification automatique des biens de consommation basée sur leurs descriptions ou sur leurs photos<br>
       Développement d’un modèle de scoring financier<br> 
       Création d’un dashboard interactif<br>
       Traitement Big Data sur le Cloud<br> 
