css description-text_2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
   --color-btn-text: #FFFFFF;    /* Texte des boutons */
   --color-h3: #00553E;          /* Teinte pour h3 */
   --color-important: #1C352D;   /* Texte important */
-  --color-descritption : #21421E; /* Description générale et étapes des projets */
+  --color-descritption : #228B22; /* Description générale et étapes des projets */
 }
 
 /* Styles globaux */
