--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -4,7 +4,7 @@
 <h1>Possibilité de développer une maladie cardiaque, ou de faire une crise cardiaque</h1>
 
 <p>
-    <description-text>Description</description-text><br>
+    <h3>Description</h3><br>
     Projet personnel basé sur un jeu de données du CDC (Centers for Disease Control and Prevention),
     une agence américaine dédiée à la prévention des maladies, des blessures et des handicaps.<br>
     Les participant à cette étude sur les maladies cardiaques devaient répondre à des questions sur leur santé,
@@ -20,6 +20,8 @@
     NB : Pour respecter le cadre RGPD, les données que vous fournissez ne sont pas conservées, 
     elle sont automatiquement détruites lorsque la page est quittée ou rechargée.
 </p>
+
+<h3>Questions</h3><br>
 
 <form method="post" action="/projects/heart_disease" onsubmit="return convertAge();">
 
@@ -107,7 +109,7 @@
   <p>{{ prediction }}</p>
 {% endif %} <br>
 
-<description-text>Etapes de création du modèle :</description-text><br>
+<h3>Etapes de création du modèle :</h3><br>
 
 <br><a href="/" class="btn">Retour à l'accueil</a>
 
