--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -111,11 +111,8 @@
 
 <h3>Etapes de création du modèle :</h3>
 
-<div
-  id="pptCarousel"
-  class="carousel slide mt-4"
->
-  <!-- Carousel indicators (the little dots) -->
+<div id="pptCarousel" class="carousel slide mt-4" data-bs-interval="false">
+  <!-- Indicators -->
   <div class="carousel-indicators">
     {% for idx in range(17) %}
       <button
@@ -128,11 +125,10 @@
     {% endfor %}
   </div>
 
-  <!-- Carousel inner: each slide item -->
+  <!-- Slides -->
   <div class="carousel-inner">
     {% for i in range(1, 18) %}
       <div class="carousel-item {% if i == 1 %}active{% endif %}">
-        <!-- Slide image -->
         <img
           src="{{ url_for('static', filename='images/Maladie_Cardiaque_PPT/Diapositive' ~ i ~ '.jpeg') }}"
           class="d-block w-100"
@@ -142,7 +138,7 @@
     {% endfor %}
   </div>
 
-  <!-- Previous control -->
+  <!-- Controls -->
   <button
     class="carousel-control-prev"
     type="button"
@@ -152,8 +148,6 @@
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-
-  <!-- Next control -->
   <button
     class="carousel-control-next"
     type="button"
