adding carousel heart disease fifth try

--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -111,7 +111,7 @@
 
 <h3>Etapes de création du modèle :</h3>
 
-<div id="pptCarousel" class="carousel slide mt-4" data-bs-interval="false">
+<div id="pptCarousel" class="carousel slide mt-4" data-bs-ride="carousel" data-bs-interval="false">
   <!-- Indicators -->
   <div class="carousel-indicators">
     {% for idx in range(17) %}
