--- a/templates/projects/heart_disease/heart_disease_en.html
+++ b/templates/projects/heart_disease/heart_disease_en.html
@@ -4,7 +4,7 @@
 
 <a href="{{ url_for('heart_disease', lang='fr') }}">Français</a>
 
-<h1>Possibility of Developing Heart Disease or Having a Heart Attack</h1>
+<h1>Possibility of developing a heart disease or having a heart attack</h1>
 
 <p>
     <h3>Description:</h3>
