--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Accueil - Maud Gesbert{% endblock %}
 {% block content %}
+
+<a href="{{ url_for('home', lang='en') }}">English</a>
+
 <h1>Bienvenue</h1>
 <h2>Maud Gesbert – Data Scientist</h2>
 
