--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,23 @@
 
   {% set lang = request.args.get('lang', 'fr') %}
   <div style="text-align: right; padding: 1em;">
-    <a href="{{ url_for(request.endpoint, **request.view_args, lang='en' if lang == 'fr' else 'fr') }}">
-      {{ 'English' if lang == 'fr' else 'Français' }}
-    </a>
+    {% if request.endpoint == 'home' %}
+      <a href="{{ url_for('home', lang='en' if lang == 'fr' else 'fr') }}">
+        {{ 'English' if lang == 'fr' else 'Français' }}
+      </a>
+    {% elif request.endpoint == 'heart_disease' %}
+      <a href="{{ url_for('heart_disease', lang='en' if lang == 'fr' else 'fr') }}">
+        {{ 'English' if lang == 'fr' else 'Français' }}
+      </a>
+    {% elif request.endpoint == 'cv' %}
+      <a href="{{ url_for('cv', lang='en' if lang == 'fr' else 'fr') }}">
+        {{ 'English' if lang == 'fr' else 'Français' }}
+      </a>
+    {% else %}
+      <!-- Pas de bouton langue pour les autres pages (ou à ajouter selon besoin) -->
+    {% endif %}
   </div>
-  
+
   <main class="container">
     {% block content %}{% endblock %}
   </main>
