--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
       <div class="nav-container">
         <a href="/" class="logo">Maud Gesbert</a>
         <ul class="nav-links">
-          <li><a href="/">Accueil</a></li>
-          <li><a href="/projects/heart_disease">Projet Maladie Cardiaque</a></li>
-          <li><a href="/projects/lite">Projet Lite</a></li>
-          <li><a href="/cv">CV</a></li>
+          <li><a href="/">Accueil/Home</a></li>
+          <li><a href="/projects/heart_disease">Maladie Cardiaque/Heart Disease</a></li>
+          <li><a href="/projects/lite">Lite</a></li>
+          <li><a href="/cv">CV/Resume</a></li>
         </ul>
       </div>
     </nav>
