--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -38,7 +38,7 @@
 
 <section>
   <h2>Références</h2>
-  <h3>Matthieu Compin</h3>
+  <color-jade>Matthieu Compin</color-jade>
   Expert Technique Espace au Commandement de l'Espace (CdE)<br><br>
   Téléphone : 06 89 17 16 44</p>
 </section><br>
