--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,7 @@ jade-color {
   text-decoration: none;
   font-size: 0.9rem;
   transition: background-color 0.3s ease;
+  transform: translateY(4px);
 }
 
 .lang-btn:hover {
