--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,18 @@
+
+@font-face {
+  font-family: 'Vanity';
+  src: url('../fonts/vanity/Vanity-Light.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Vanity';
+  src: url('../fonts/vanity/Vanity-Bold.ttf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 /* Palette de couleurs conservée */
 :root {
   --color-primary: #EE4D5A;     /* Rose punchy */
@@ -73,6 +88,8 @@ header {
 
 /* Titres et textes */
 h1 {
+  font-family: 'Vanity', sans-serif;
+  font-weight: bold; /* Vanity-Bold */
   background-color: var(--color-primary);
   color: white;
   padding: 1.5rem 0;
