matilde font for h1larger_3

--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -2,7 +2,7 @@
 {% block title %}Projet : Heart Disease{% endblock %}
 {% block content %}
 
-<h1>Possibilité de développer une maladie cardiaque, ou de faire une crise cardiaque</h1>
+<h1>POSSIBILITE DE DEVELOPPER UNE MALADIE CARDIAQUE, ou de faire une crise cardiaque</h1>
 
 <p>
     <h3>Description :</h3>
