--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,21 @@
-{% extends "base.html" %}
-{% block title %}Accueil - Maud Gesbert{% endblock %}
 {% block content %}
+<div class="centered-content">
+  <h1>Bienvenue</h1>
+  <h2>Maud Gesbert – Data Scientist</h2>
 
-<h1>Bienvenue</h1>
-<h2>Maud Gesbert – Data Scientist</h2>
+  <p>Explorez mes projets de science des données :</p>
+  <ul>
+      <li><a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a></li>
+  </ul>
 
-<p>Explorez mes projets de science des données :</p>
-<ul>
-    <li><a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a></li>
-</ul>
+  <p>Explorez mes projets d'analyses des données :</p>
+  <ul>
+      <li><a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a></li>
+  </ul>
 
-<p>Explorez mes projets d'analyses des données :</p>
-<ul>
-    <li><a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a></li>
-</ul>
-
-<p>Parcourez une version plus complète de mon CV :</p>
-<ul>
-    <li><a href="/cv">CV</a></li>
-</ul>
+  <p>Parcourez une version plus complète de mon CV :</p>
+  <ul>
+      <li><a href="/cv">CV</a></li>
+  </ul>
+</div>
 {% endblock %}
