--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 {% block title %}Home - Maud Gesbert{% endblock %}
 {% block content %}
+<div class="centered-content"></div>
+    <h1>Welcome</h1>
+    <h2>Maud Gesbert – Data Scientist</h2>
 
-<h1>Welcome</h1>
-<h2>Maud Gesbert – Data Scientist</h2>
+    <p>Explore my data science projects:</p>
+    <ul>
+        <li><a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a></li>
+    </ul>
 
-<p>Explore my data science projects:</p>
-<ul>
-    <li><a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a></li>
-</ul>
+    <p>Explore my data analysis projects:</p>
+    <ul>
+        <li><a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a></li>
+    </ul>
 
-<p>Explore my data analysis projects:</p>
-<ul>
-    <li><a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a></li>
-</ul>
-
-<p>View a more complete version of my resume:</p>
-<ul>
-    <li><a href="/cv?lang=en">Resume</a></li>
-</ul>
+    <p>View a more complete version of my resume:</p>
+    <ul>
+        <li><a href="/cv?lang=en">Resume</a></li>
+    </ul>
+</div>
 {% endblock %}
