--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home - Maud Gesbert{% endblock %}
 {% block content %}
-<div class="centered-content"></div>
+<div class="centered-content">
     <h1>Welcome</h1>
     <h2>Maud Gesbert – Data Scientist</h2>
 
