--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
+{% extends "base.html" %}
+{% block title %}Accueil - Maud Gesbert{% endblock %}
 {% block content %}
-
 <div class="centered-content">
   <h1>Bienvenue</h1>
   <h2>Maud Gesbert – Data Scientist</h2>
